gui/editor/AngleEditorRads: Fix Java9+ deprecation for new Float.